<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softpurple">

    <ImageView
        android:id="@+id/photoprofile"
        android:layout_width="98dp"
        android:layout_height="98dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/bck_profile"
        android:src="@drawable/icn_profile"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/getphoto"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/camera_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoprofile" />

    <ImageButton
        android:id="@+id/return_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:alpha="0.5"
        android:background="@drawable/btn_circle"
        android:contentDescription="@string/boton_regresar_home"
        android:scaleType="centerInside"
        android:src="@drawable/flecha"
        android:rotation="180"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombrepro"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="190dp"
        android:hint="@string/Minombre"
        android:textColorHint="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/downaldqr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="636dp"
        android:hint="@string/ownald_qr_profile"
        android:alpha="0.6"
        android:textColorHint="@color/black"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prof_correo"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="260dp"
        android:alpha="0.7"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/prof_dire"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="25dp"
        android:alpha="0.7"
        android:hint="@string/direccion"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <EditText
        android:id="@+id/prof_dire2"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="100dp"
        android:alpha="0.7"
        android:hint="@string/telefono"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <EditText
        android:id="@+id/prof_dire3"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="110dp"
        android:layout_marginTop="175dp"
        android:alpha="0.5"
        android:textSize="15sp"
        android:hint="@string/dia"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <EditText
        android:id="@+id/prof_dire4"
        android:layout_width="54dp"
        android:layout_height="44dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="175dp"
        android:alpha="0.5"
        android:textSize="15sp"
        android:hint="@string/mes"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <EditText
        android:id="@+id/prof_dire5"
        android:layout_width="70dp"
        android:layout_height="44dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="175dp"
        android:alpha="0.5"
        android:textSize="15sp"
        android:hint="@string/ano"
        android:textColorHint="@color/earlypurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.798"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="28dp"
        android:layout_height="68dp"
        android:layout_marginStart="189dp"
        android:layout_marginTop="165dp"
        android:alpha="0.5"
        android:text="@string/guion"
        android:textColor="@color/Drakpurple"
        android:textSize="45sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="28dp"
        android:layout_height="68dp"
        android:layout_marginHorizontal="262dp"
        android:layout_marginTop="162dp"
        android:alpha="0.5"
        android:text="@string/guion"
        android:textColor="@color/Drakpurple"
        android:textSize="45sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prof_correo" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="240dp"
        android:background="@drawable/birthday_icon"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrepro" />

    <ImageView
        android:layout_width="91dp"
        android:layout_height="83dp"
        android:layout_marginTop="332dp"
        android:background="@drawable/code_icn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombrepro" />


</androidx.constraintlayout.widget.ConstraintLayout>