<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck_register">


    <EditText
        android:id="@+id/confirmpassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:alpha="0.5"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/softpurple"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.347"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/createpassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="534dp"
        android:alpha="0.5"
        android:hint="@string/create_password"
        android:textColorHint="@color/softpurple"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linea3_rgs"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="200dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea1_rgs" />

    <ImageButton
        android:id="@+id/btn_next_login"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="616dp"
        android:alpha="0.5"
        android:background="@drawable/btn_circle"
        android:contentDescription="@string/boton_siguiente_del_register"
        android:scaleType="centerInside"
        android:src="@drawable/flecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:alpha="0.5"
        android:hint="@string/create_username"
        android:textColorHint="@color/softpurple"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="336dp"
        android:alpha="0.5"
        android:hint="@string/correo_electronico"
        android:textColorHint="@color/softpurple"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linea2_rgs"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="104dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea1_rgs" />

    <View
        android:id="@+id/linea1_rgs"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="272dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/linea4_rgs"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="304dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linea1_rgs" />

</androidx.constraintlayout.widget.ConstraintLayout>