<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_fondo">

    <!-- Lineas -->

    <View
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="337dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="3dp"
        android:layout_marginTop="433dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

     <View
        android:id="@+id/view3"
        android:layout_width="65dp"
        android:layout_height="3dp"
        android:layout_marginTop="682dp"
        android:background="@color/Drakpurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- textos -->

    <TextView
        android:id="@+id/Username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:alpha="0.5"
        android:text="@string/username"
        android:textColor="@color/softpurple"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/password"
        android:layout_width="200dp"
        android:alpha="0.5"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/password"
        android:textColor="@color/softpurple"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.279"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/Login"
        android:layout_width="65dp"
        android:layout_height="39dp"
        android:layout_marginTop="312dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/log_in"
        android:textColor="@color/softpurple"
        android:textSize="23dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="192dp"
        android:layout_height="39dp"
        android:layout_marginTop="104dp"
        android:alpha="0.5"
        android:singleLine="true"
        android:text="@string/Passwordforgot"
        android:textColor="@color/softpurple"
        android:textSize="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.872"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Username" />

    <!-- Boton siguiente  -->

    <ImageButton
        android:id="@+id/btnStart"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="508dp"
        android:alpha="0.5"
        android:background="@drawable/btn_circle"
        android:contentDescription="Botón siguiente"
        android:scaleType="centerInside"
        android:src="@drawable/flecha"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>